--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
     "react-icons": "^4.8.0",
     "react-pro-sidebar": "^1.0.0",
     "react-rating": "^2.0.5",
